WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116529
[BlackBerry] FontCache::getFontDataForCharacters() returns nullptr
https://bugs.webkit.org/show_bug.cgi?id=116529
Summary
[BlackBerry] FontCache::getFontDataForCharacters() returns nullptr
Alberto Garcia
Reported
2013-05-21 03:25:03 PDT
This cannot be converted to a PassRefPtr and breaks the build: FontCacheBlackBerry.cpp:150:16: error: could not convert 'nullptr' from 'std::nullptr_t' to 'WTF::PassRefPtr<WebCore::SimpleFontData>' FontCacheBlackBerry.cpp:174:16: error: could not convert 'nullptr' from 'std::nullptr_t' to 'WTF::PassRefPtr<WebCore::SimpleFontData>' The change was introduced in
r147639
http://trac.webkit.org/changeset/147639/trunk/Source/WebCore/platform/graphics/blackberry/FontCacheBlackBerry.cpp
Attachments
Patch
(1.95 KB, patch)
2013-05-21 03:26 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-05-21 03:26:14 PDT
Created
attachment 202404
[details]
Patch
Andreas Kling
Comment 2
2013-05-21 08:28:01 PDT
Comment on
attachment 202404
[details]
Patch Oops, my bad! r=me
WebKit Commit Bot
Comment 3
2013-05-21 08:49:50 PDT
Comment on
attachment 202404
[details]
Patch Clearing flags on attachment: 202404 Committed
r150442
: <
http://trac.webkit.org/changeset/150442
>
WebKit Commit Bot
Comment 4
2013-05-21 08:49:51 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug