[BlackBerry] FontCache::getFontDataForCharacters() returns nullptr https://bugs.webkit.org/show_bug.cgi?id=116529

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-05-21
Reviewed by Andreas Kling.

This cannot be converted to a PassRefPtr and breaks the build.

* platform/graphics/blackberry/FontCacheBlackBerry.cpp:
(WebCore::FontCache::getFontDataForCharacters):

Canonical link: https://commits.webkit.org/134849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150442 268f45cc-cd09-0410-ab3c-d52691b4dbfc